# BitBusters

./: .gitignore  43.html  Jewelry-Rings-2%C2%B7Stone-Rings.xlsx  Jewelry-Rings-2·Stone-Rings.xlsx  Jewelry-Rings-Adjustable.xlsx  README.md  diagram.py  full_page.html  gold.csv  hhh.html  main.py  page.html  product_list.py  products_info.py  pyproject.toml  requirements.txt  sel3.py  t.html  tyhgr.html
core/: diagram.py  settings.py
files/: Jewelry-Rings-Adjustable.xlsx
