[tool.poetry]
name = "bitbusters"
version = "0.1.0"
description = ""
authors = ["Nikita Kolesnik <118283668+KolesnikNV@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.0"
schedule = "^1.2.0"
openpyxl = "^3.1.2"
aiohttp = "^3.8.5"
certifi = "^2023.7.22"
html5lib = "^1.1"
httpx = "^0.25.0"
fake-useragent = "^1.2.1"
xlsxwriter = "^3.1.4"
selenium = "^4.12.0"
requests-html = "^0.10.0"
selenium-wire = "^5.1.0"
aiofiles = "^23.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
