[tool.poetry]
name = "bitbusters"
version = "0.1.0"
description = ""
authors = ["Nikita Kolesnik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.8.4"
aiosignal = "1.3.1"
async-timeout = "4.0.2"
attrs = "23.1.0"
charset-normalizer = "3.1.0"
et-xmlfile = "1.1.0"
frozenlist = "1.3.3"
idna = "3.4"
numpy = "1.24.3"
openpyxl = "3.1.2"
pandas = "2.0.2"
python-dateutil = "2.8.2"
pytz = "2023.3"
six = "1.16.0"
tzdata = "2023.3"
yarl = "1.9.2"
halo = "^0.0.31"
diagrams = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
